# Sysy-Compiler

./: CMakeLists.txt  Readme.md
include/: koopa.h
lib/: libkoopa.dylib
src/: ast.cpp  ast.h  main.cpp  sysy.l  sysy.y
src/ir/: block.cpp  block.h  func.cpp  func.h  inst.cpp  inst.h  operand.cpp  operand.h  program.cpp  program.h  scope.cpp  scope.h  type.cpp  type.h  value.cpp  value.h
src/risk/: asm.cpp  asm.h  bridge.cpp  bridge.h  func.cpp  func.h  program.cpp  program.h  record.cpp  record.h
testcases/lv6/: 8_returns.c
testcases/lv7/: 05_if_while.c  08_if_break.c  11_complex.c
testcases/lv8/: 00_int_func.c  10_complex.c  test.c
testcases/lv9/: 03_arr_init_1d.c  04_arr_init_nd.c  05_global_arr_init.c  test.c
